加上了电量

--- a/components/pages/CMakeLists.txt
+++ b/components/pages/CMakeLists.txt
@@ -1,4 +1,4 @@
-file(GLOB PAGE_SRCS "mainpage.c" "page_manager.c" "*.c")
+file(GLOB PAGE_SRCS "lwpage.c" "mainpage.c" "page_manager.c" "*.c")
 idf_component_register(SRCS "${PAGE_SRCS}"
     INCLUDE_DIRS "."
     REQUIRES driver lvgl freertos fatfs core screen
